internal-review-3/Fanvault-GitOps/gateway/httproutes-prod.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fanvault-prod
  namespace: prod
spec:
  parentRefs:
    - name: fanvault-gateway
      namespace: kgateway-system
  hostnames:
    - "fanvault.garden"
    - "api.fanvault.garden"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/auth
      backendRefs:
        - name: prod-user-service
          port: 3001
    - matches:
        - path:
            type: PathPrefix
            value: /api/users
      backendRefs:
        - name: prod-user-service
          port: 3001
    - matches:
        - path:
            type: PathPrefix
            value: /api/products
      backendRefs:
        - name: prod-commerce-service
          port: 3002
    - matches:
        - path:
            type: PathPrefix
            value: /api/orders
      backendRefs:
        - name: prod-commerce-service
          port: 3002
    - matches:
        - path:
            type: PathPrefix
            value: /api/admin
      backendRefs:
        - name: prod-commerce-service
          port: 3002
    - matches:
        - path:
            type: PathPrefix
            value: /api/ai
      backendRefs:
        - name: prod-ai-service
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prod-frontend
          port: 80
